# FinalYearProject

./: .gitignore  README.md
Backend/: package-lock.json  package.json
Backend/go/: go.mod  main.go
Backend/rust/: Cargo.toml
Backend/rust/src/: main.rs
Backend/src/: index.ts
DesktopApp/: index.html  package-lock.json  package.json
DesktopApp/src/: App.css  App.tsx
DesktopApp/src-tauri/: tauri.conf.json
Frontend/: index.html  package-lock.json
Frontend/src/: App.css  App.jsx  App.tsx  index.css
Frontend/src/components/: Breakdown.jsx  CTA.jsx  Courses.jsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Stats.jsx  Testimonials.jsx
Frontend/src/components/common/: Footer.tsx  Header.tsx
Frontend/src/components/console/: AnchorSyncPanel.tsx  ConnectionsOverview.tsx  SubsystemsPanel.tsx  TelemetryPanel.tsx
Frontend/src/components/sections/: ArchitectureSection.tsx  CTASection.tsx  CapabilitiesSection.tsx  HeroSection.tsx  StatsSection.tsx  TimelineSection.tsx
Frontend/src/components/ui/: GlassCard.tsx  SubTag.tsx  SystemToggle.tsx
Frontend/src/pages/: ConsolePage.tsx  LandingPage.tsx
Frontend/src/types/: index.ts
MobileApp/android/app/: build.gradle.kts
MobileApp/android/app/src/main/kotlin/com/ininsico/mobile_app/: MainActivity.kt
MobileApp/ios/Runner.xcodeproj/: project.pbxproj
MobileApp/lib/: main.dart
MobileApp/linux/: CMakeLists.txt
MobileApp/macos/Runner.xcodeproj/: project.pbxproj
MobileApp/macos/Runner/Configs/: AppInfo.xcconfig
MobileApp/test/: widget_test.dart
MobileApp/windows/runner/: Runner.rc
