[package]
name = "rust_offloader"
version = "0.1.0"
edition = "2021"
description = "High-performance computational offloading for Aether AVR (SLAM matrix math, sensor fusion EKF)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
